# pygments-styles

./: .gitignore  README.md  pyproject.toml  serve.py
.github/workflows/: docs.yml  pypi.yml
docs/: changelog.rst  conf.py  index.rst  install.rst  sponsors.rst
docs/_public/: robots.txt
docs/_static/: home.css  pygments-andromeeda.css  pygments-ayu-dark.css  pygments-ayu-light.css  pygments-ayu-mirage.css  pygments-catppuccin-mocha.css  pygments-everforest-dark.css  pygments-everforest-light.css  pygments-github-dark-default.css  pygments-github-dark-dimmed.css  pygments-github-dark-high-contrast.css  pygments-github-light-default.css  pygments-github-light-high-contrast.css  pygments-laserwave-high-contrast.css  pygments-laserwave.css  pygments-one-dark-pro.css  pygments-one-light.css  pygments-plastic.css  pygments-styles.css
docs/_templates/: preview.html  samples.html  selector.html
docs/_templates/css/: aurora-x.css  ayu-light.css  ayu-mirage.css  catppuccin-frappe.css  catppuccin-latte.css  catppuccin-macchiato.css  dark-plus.css  everforest-dark.css  everforest-light.css  github-light-high-contrast.css  gruvbox-dark-hard.css  gruvbox-dark-medium.css  gruvbox-dark-soft.css  gruvbox-light-hard.css  gruvbox-light-medium.css  gruvbox-light-soft.css  home.css  light-plus.css  one-light.css  pygments-styles.css
docs/_templates/layout/: home.html  preview.html
docs/guide/: mkdocs.rst  sphinx.rst
docs/styles/: andromeeda.rst  aurora-x.rst  ayu-dark.rst  ayu-light.rst  ayu-mirage.rst  catppuccin-frappe.rst  catppuccin-latte.rst  catppuccin-macchiato.rst  catppuccin-mocha.rst  dark-plus.rst  everforest-dark.rst  everforest-light.rst  github-dark-default.rst  github-dark-dimmed.rst  github-dark-high-contrast.rst  github-light-default.rst  github-light-high-contrast.rst  gruvbox-dark-hard.rst  gruvbox-dark-medium.rst  gruvbox-dark-soft.rst  gruvbox-light-hard.rst  gruvbox-light-medium.rst  gruvbox-light-soft.rst  laserwave-high-contrast.rst  laserwave.rst  light-plus.rst  one-dark-pro.rst  one-light.rst  plastic.rst
samples/: bash.sample  diff.sample  lua.sample  python-console.sample  python.sample  rebol.sample  ruby.sample  scheme.sample  sql.sample  swift.sample  typescript.sample
scripts/: build.py  gen-catppuccin.py  gen-styles-docs.py  template.html
scripts/templates/: index.html  style.css
src/pygments_styles/: ayu_dark.py  ayu_mirage.py  dark_plus.py  one_dark_pro.py
src/vs_pygments/: andromeeda.py  aurora_x.py  ayu_dark.py  ayu_light.py  ayu_mirage.py  catppuccin_frappe.py  catppuccin_latte.py  catppuccin_macchiato.py  catppuccin_mocha.py  dark_plus.py  light_plus.py
